[gd_scene load_steps=9 format=2]

[ext_resource path="res://Scripts/menu.gd" type="Script" id=1]
[ext_resource path="res://Assets/Menu.png" type="Texture" id=2]
[ext_resource path="res://Assets/start-removebg-preview.png" type="Texture" id=3]
[ext_resource path="res://Assets/exit-removebg-preview.png" type="Texture" id=4]
[ext_resource path="res://Assets/about-removebg-preview.png" type="Texture" id=5]
[ext_resource path="res://Assets/StartHover-removebg-preview.png" type="Texture" id=6]
[ext_resource path="res://Assets/AboutHover-removebg-preview.png" type="Texture" id=7]
[ext_resource path="res://Assets/ExitHover-removebg-preview.png" type="Texture" id=8]

[node name="Menu" type="Node2D"]
z_as_relative = false
script = ExtResource( 1 )

[node name="Background" type="Sprite" parent="."]
position = Vector2( 510.156, 300 )
scale = Vector2( 0.53558, 0.561111 )
texture = ExtResource( 2 )

[node name="start_button" type="TextureButton" parent="Background"]
margin_left = -397.07
margin_top = -359.811
margin_right = 382.93
margin_bottom = -59.8113
texture_normal = ExtResource( 3 )
texture_hover = ExtResource( 6 )

[node name="about_button" type="TextureButton" parent="Background"]
margin_left = -391.408
margin_top = -138.04
margin_right = 388.592
margin_bottom = 161.96
texture_normal = ExtResource( 5 )
texture_hover = ExtResource( 7 )

[node name="exit_button" type="TextureButton" parent="Background"]
margin_left = -383.858
margin_top = 103.727
margin_right = 396.142
margin_bottom = 404.727
texture_normal = ExtResource( 4 )
texture_hover = ExtResource( 8 )

[connection signal="pressed" from="Background/start_button" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="Background/about_button" to="." method="_on_about_button_pressed"]
[connection signal="pressed" from="Background/exit_button" to="." method="_on_exit_button_pressed"]
